# TFM_Navigation

./: README.md
basic_nav/: initial_pose.yaml  package.xml  setup.cfg  setup.py
basic_nav/basic_nav/: simple_commander_example.py  waypoints_navigation.py
basic_nav/config/: waypoints.yaml
my_nav2_slam_pkg/: CMakeLists.txt  README.md  package.xml
my_nav2_slam_pkg/config/: nav2_params.yaml  rviz_config.rviz  slam_params.yaml
my_nav2_slam_pkg/launch/: nav2_launch.py  navigation_with_slam.launch.py  slam_launch.py
my_nav2_slam_pkg/maps/: README.md
